# cv-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  main.py  main.txt  pyproject.toml  pytest.ini  streamlit_app.py
examples/: interactive_demo.py
src/cv_agent/: workflow.py
src/cv_agent/models/: state.py
src/cv_agent/nodes/: analysis.py  improvement.py  parsing.py  user_interaction.py
src/cv_agent/tools/: analyzers.py  jd_analyzer.py  parsers 2.py  parsers.py  user_interaction.py
src/cv_agent/utils/: monitoring.py
tests/: __init__.py  conftest.py  test_main.py
tests/fixtures/: sample_cv.txt  sample_cv_markdown.md
tests/unit/models/: test_state.py
tests/unit/nodes/: __init__.py  test_parsing.py
tests/unit/tools/: test_analyzers.py  test_parsers.py
tests/unit/workflow/: test_workflow.py
